fix(Drawer): fix header spacing
ref:
production-pre-test#PR-015

--- a/src/components/Drawer/Header/styles.module.css
+++ b/src/components/Drawer/Header/styles.module.css
@@ -5,7 +5,7 @@
   top: 0;
   z-index: var(--z-index-global-header);
   padding-top: var(--sp40);
-  margin-bottom: var(--sp16);
+  padding-bottom: var(--sp16);
   background: var(--color-white);
 
   & h2 {
